# STM32_USB_Gamepad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  stm32f103x8_flash.ld
cmake/: gnu-tools-for-stm32.cmake  vscode_generated.cmake
platform/: CMakeLists.txt
platform/config/: CMakeLists.txt  device_definitions.h  device_mcu_includes.h
platform/config/HAL_configuration/: CMakeLists.txt  stm32f1xx_hal_conf.h
platform/config/USB_configuration/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_descriptors.h
platform/config/USB_configuration/bsp/: board.c  board_api.h
platform/mcu/: CMakeLists.txt
platform/startup/: CMakeLists.txt  startup_stm32f103xx.s  syscall.c  sysmem.c
src/: CMakeLists.txt  main.c
src/bsp/: CMakeLists.txt  adc_bsp.c  adc_bsp.h  buttons_bsp.c  buttons_bsp.h
src/driver/: CMakeLists.txt  usb_device_driver.c  usb_device_driver.h
